2007-05-25  Marcus Brinkmann  <marcus@g10code.de>

	* src/uninst-gnupg.nsi: Fix path of gpgkeys helper programs.
	Remove pub directory.
	* src/uninst-gtk+.nsi: Fix path of directory to be removed.

2007-05-24  Werner Koch  <wk@g10code.com>

	Released 1.1.0.

	* configure.ac (PREVIEWHOST): New. 
	(MANUALVERSION_NOVICES): Set to 1.0.0.

2007-05-20  Marcus Brinkmann  <marcus@g10code.de>

	* patches/glib-2.12.12/01-giowin32.patch,
	patches/glib-2.12.12/02-gspawn-w32.patch,
	patches/glib-2.12.12/03-gspawn-w32-fixup.patch: New files.
	* Makefile.am (EXTRA_DIST): Add these new files.

	* src/gpgwrap.c (build_commandline): New function.
	(main): Quote argument vector.

	* configure.ac: Comment advanced manual here as well.

2007-05-19  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Fix test.
	* src/Makefile.am: Replace := by =.a 

	* packages/download.sh: Require bash due to brace expansion.

2007-05-18  Werner Koch  <wk@g10code.com>

	* src/gpgwrap.c (main): Delimit the real path from the version
	using a semicolon.

2007-05-17  Werner Koch  <wk@g10code.com>

	* src/installer.nsi (AddToPath,RemoveFromPath): New.
	* src/inst-gpa.nsi: Install gpgwrap for gpa.
	* src/inst-gnupg.nsi: Install gpgwrap for gpg, gpgv and gpgsplit.
	
	* src/gpgwrap.c: New.

	* configure.ac: Check for strip.
	(AC_CONFIG_HEADER): New.
	* src/Makefile.am (g4wihelp.dll): Strip.
	(gpgwrap.exe): Build.

2007-05-16  Werner Koch  <wk@g10code.com>

	* src/inst-gtk+.nsi: Install new themes and the engines.  Update
	to gtk 2.10.
	* src/uninst-gtk+.nsi: Likewise.

	* src/inst-pango.nsi: Adjust for Pango 1.16.

	* configure.ac: New package Cairo as reguired by the current Gtk+.
	* src/uninst-cairo.nsi, src/inst-cairo.nsi: New.
	* src/inst-sections.nsi: Install Cairo.
	* include/config.nsi.in: Ditto.

	* src/uninst-gnupg.nsi: Delete gnupg.nls directory.

2007-03-09  Werner Koch  <wk@g10code.com>

	Released 1.0.9.

	* src/Makefile.am: Fixed syntax error in gnupg post install.